<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_toast_error"
    android:padding="@dimen/_9sdp">

    <ImageView
        android:id="@+id/imgV_successful"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:contentDescription="@string/cd_no_internet"
        android:src="@drawable/outline_signal_wifi_statusbar_connected_no_internet_4_24"
        app:layout_constraintBottom_toBottomOf="@id/txtToastMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtSuccess" />

    <TextView
        android:id="@+id/txtSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_11sdp"
        android:text="@string/txt_no_internet"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txtToastMessage"
        app:layout_constraintStart_toEndOf="@id/imgV_successful"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtToastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/txt_connect_with_internet"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgV_successful"
        app:layout_constraintTop_toBottomOf="@id/txtSuccess" />

</androidx.constraintlayout.widget.ConstraintLayout>