<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bs_layoutCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgV_cam"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/cd_camera_image"
            android:src="@drawable/outline_camera_24"
            app:layout_constraintBottom_toTopOf="@id/txt_cam"
            app:layout_constraintEnd_toEndOf="@id/txt_cam"
            app:layout_constraintStart_toStartOf="@id/txt_cam"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cd_camera"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgV_cam" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bs_layoutGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/bs_layoutCam"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgV_gallery"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/cd_album_image"
            android:src="@drawable/outline_image_24"
            app:layout_constraintBottom_toTopOf="@id/txt_gallery"
            app:layout_constraintEnd_toEndOf="@id/txt_gallery"
            app:layout_constraintStart_toStartOf="@id/txt_gallery"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_gallery"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgV_gallery" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>