<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp">

    <!--    NAME    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        app:boxBackgroundColor="@color/light_color1"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_3sdp"
        app:boxCornerRadiusBottomStart="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_3sdp"
        app:boxCornerRadiusTopStart="@dimen/_3sdp"
        app:boxStrokeColor="@color/color2"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:helperTextTextColor="@color/color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/addParty_edtxt_partyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_partyName"
            android:inputType="textCapSentences"
            android:padding="@dimen/_9sdp"
            android:singleLine="true"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    COMPANY NAME    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        app:boxBackgroundColor="@color/light_color1"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_3sdp"
        app:boxCornerRadiusBottomStart="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_3sdp"
        app:boxCornerRadiusTopStart="@dimen/_3sdp"
        app:boxStrokeColor="@color/color2"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:helperTextTextColor="@color/color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til1">

        <EditText
            android:id="@+id/addParty_edtxt_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_company_name"
            android:inputType="textCapSentences"
            android:padding="@dimen/_9sdp"
            android:singleLine="true"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    COMPANY ADDRESS    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til3"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        app:boxBackgroundColor="@color/light_color1"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_3sdp"
        app:boxCornerRadiusBottomStart="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_3sdp"
        app:boxCornerRadiusTopStart="@dimen/_3sdp"
        app:boxStrokeColor="@color/color2"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:helperTextTextColor="@color/color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til2">

        <EditText
            android:id="@+id/addParty_edtxt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_address"
            android:inputType="textCapSentences"
            android:padding="@dimen/_9sdp"
            android:singleLine="true"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    EMAIL    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til4"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        app:boxBackgroundColor="@color/light_color1"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_3sdp"
        app:boxCornerRadiusBottomStart="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_3sdp"
        app:boxCornerRadiusTopStart="@dimen/_3sdp"
        app:boxStrokeColor="@color/color2"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:helperTextTextColor="@color/color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til3">

        <EditText
            android:id="@+id/addParty_edtxt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_e_mail"
            android:inputType="textEmailAddress|textCapSentences"
            android:padding="@dimen/_9sdp"
            android:singleLine="true"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    CONTACT / PHONE NUMBER    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til5"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        app:boxBackgroundColor="@color/light_color1"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_3sdp"
        app:boxCornerRadiusBottomStart="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_3sdp"
        app:boxCornerRadiusTopStart="@dimen/_3sdp"
        app:boxStrokeColor="@color/color2"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:helperTextTextColor="@color/color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til4">

        <EditText
            android:id="@+id/addParty_edtxt_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_contact_"
            android:inputType="phone|textCapSentences"
            android:padding="@dimen/_9sdp"
            android:singleLine="true"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    TYPE (B2B/B2C)     -->
    <RadioGroup
        android:id="@+id/addParty_rg_type"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til5">

        <RadioButton
            android:id="@+id/addParty_rBtn_B2B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blur_color2"
            android:text="@string/txt_b2b"
            android:textColor="@color/color2" />

        <RadioButton
            android:id="@+id/addParty_rBtn_B2C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blur_color2"
            android:text="@string/txt_b2c"
            android:textColor="@color/color2" />

    </RadioGroup>

    <!--  SAVE  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveParty"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:background="@drawable/shape_btn_green"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textColor="@color/color5"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@id/til5"
        app:layout_constraintTop_toBottomOf="@id/addParty_rg_type" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_addparty_cancel"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:background="@drawable/shape_btn_red"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/color4"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@id/til5"
        app:layout_constraintTop_toBottomOf="@id/addParty_rg_type" />

</androidx.constraintlayout.widget.ConstraintLayout>