<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PartiesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_3sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parties_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/anim_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/partyFrag_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:backgroundTint="@color/color1"
            android:contentDescription="@string/cd_add_button"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="@dimen/_32sdp"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/partyFrag_noData_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_500sdp"
            android:layout_gravity="center|top"
            android:contentDescription="@string/cd_illustration_image"
            android:src="@drawable/add_user_cuate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/_130sdp"
            android:text="@string/txt_no_party_data"
            android:textAlignment="center"
            android:textColor="@color/blur_color2"
            android:textSize="@dimen/_15ssp"
            android:textStyle="" />

    </FrameLayout>

</FrameLayout>